--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ footer:
 
 # Disqus comments shortname, requires Disqus account https://disqus.com/
 disqus:
-    shortname:      # 1234
+    shortname: therubyproject # 1234
 
 # Google analytics code, get your code here https://www.google.com/analytics/
 google_analytics:
